fix mobile text overflow causing layout issue

--- a/assets/css/_typography.styl
+++ b/assets/css/_typography.styl
@@ -29,6 +29,11 @@ p
   letter-spacing:normal !important
   line-height:1.2 !important
 
+.ellipsis
+  text-overflow:ellipsis
+  white-space:nowrap
+  overflow:hidden
+
 .text-right
   text-align:right
   
